test/should-fail/vsgc2079.f3
/*
 * @test/compile-error
 */

var f:Boolean[] = ["ra"];
